K8s/2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ajaykumara/gw-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: google-credentials
          mountPath: /app/credentials
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 4000
    targetPort: 4000
